--- a/src/styles/pause.css
+++ b/src/styles/pause.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
 .pause-overlay {
     position: fixed;
     top: 0;
@@ -18,18 +16,22 @@
     padding: 30px 50px;
     border-radius: 10px;
     text-align: center;
-    border: 2px solid white;
+    border: 2px solid #e9d8f6;
+    box-shadow: 0 0 30px rgba(154, 92, 208, 0.7), inset 0 0 20px rgba(154, 92, 208, 0.3);
 }
 
 .pause-content h2 {
     font-size: 36px;
     margin-bottom: 20px;
-    color: white;
-    font-family: 'Press Start 2P', cursive;
+    color: rgb(239, 215, 255);
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 650;
+    text-shadow: 0 0 30px rgba(154, 92, 208, 1), 0 0 10px rgba(231, 212, 255,0.6);
 }
 
 .pause-content p {
     font-size: 18px;
     color: #cccccc;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Orbitron', sans-serif;
+    font-style: italic;
 }
