--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -13,7 +13,7 @@
     background-position: center;
     z-index: 1000;
     color: white;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Orbitron', sans-serif;
     overflow: hidden;
 }
 
@@ -30,13 +30,14 @@
 .game-description {
     max-width: 600px;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     margin-bottom: 2rem;
-    color: #ffffff;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 1), 0 0 10px rgba(0, 0, 0, 0.8);
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 15px;
+    color: #f0ffff;
+    text-shadow: 0 0 20px rgba(74, 109, 255, 1), 0 0 10px rgb(0, 0, 0, 1);
+    /* background-color: rgba(74, 109, 255, 0.2);; */
+    padding: 20px 30px;
     border-radius: 8px;
+    font-family: 'Orbitron', sans-serif;
 }
 
 .loading-info {
@@ -92,6 +93,7 @@
     outline: none;
     text-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    font-family: 'Orbitron', sans-serif;
 }
 
 .start-button.hovered {
@@ -101,12 +103,13 @@
 }
 
 .controls-info {
+    font-family: 'Orbitron', sans-serif;
     margin-top: 2rem;
     font-size: 1rem;
     opacity: 0.9;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.6);
-    padding: 10px 20px;
+    padding: 0px 20px;
     border-radius: 6px;
     text-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
 }
